# Needlelight

./: .gitignore  .npmrc  CHANGELOG.md  Needlelight.sln  README.md  RELEASE_NOTES_v5.1.0.0_GITHUB.md  SECURITY.MD  appcast.xml  crowdin.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  crash_report.md  question.md  (+3 more)
Changelogs/: v6.1.0.2.md
Lumafly/: App.xaml  Lumafly.csproj  Program.cs  Resources.resx  Settings.cs  ViewLocator.cs  resources.Designer.cs
Lumafly.AU/: Lumafly.AU.csproj  Program.cs  README.md
Lumafly.Tests/: Lumafly.Tests.csproj  ModSourceTest.cs
Needlelight/: App.xaml  App.xaml.cs  AssemblyInfo.cs  Needlelight.csproj  Program.cs  Resources.resx  Settings.cs  ViewLocator.cs  app.manifest  resources.Designer.cs
Needlelight.AU/: Needlelight.AU.csproj  Program.cs  README.md  app.manifest  publish.bat
Needlelight.Tests/: DatabaseTest.cs  MiscServicesTest.cs  ModSourceTest.cs  Needlelight.Tests.csproj
Scripts/: make_appcast.py  make_mac_app.py  publish.bat
src/: App.vue  main.js  routes.js
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  logs_plugin.rs  main.rs  process_plugin.rs  profile_create_plugin.rs  profile_plugin.rs
src-tauri/src/backend/: errors.rs  installed_mods.rs  installer.rs  mod.rs  mod_database.rs  models.rs  pack_manager.rs  profiles.rs  settings.rs  url_scheme.rs
(+198 files in other folders)
