[package]
name = "needlelight-tauri"
version = "1.0.0"
description = "Needlelight Tauri rewrite"
authors = ["Needlelight"]
edition = "2021"

[lib]
name = "needlelight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
zip = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
url = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.20"
urlencoding = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
